2020-12-28  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/ocinumber.c: Suppress C compiler warning: enumeration value ‘RUBY_T_NONE’ not handled in switch

2020-09-10  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/extconf.rb: Fix for TruffleRuby 20.2 or before.

2020-09-08  Brandon Fish <brandon.j.fish@oracle.com>
	* ext/oci8/extconf.rb, lib/oci8.rb: Handle truffleruby RUBY_ENGINE in case statements

2020-01-11  Kubo Takehiro <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.7 and 2.2.8.
	* lib/oci8/version.rb: Update to 2.2.8.

2020-01-11  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/bind.c: Fix warning: comparison between signed and
	    unsigned integer expressions

2020-01-11  Kubo Takehiro <kubo@jiubao.org>
	* test/README.md: Update preparation SQL statements for running tests.

2020-01-11  Kubo Takehiro <kubo@jiubao.org>
	* test/test_break.rb: Check Oracle server OS where tests run
	    using dbms_utility.port_string. Tests in test_break.rb
	    failed on Windows.

2020-01-07  Kubo Takehiro <kubo@jiubao.org>
	* mkpkg-win32.rb: Workarounds for compilation using ruby 2.4 and 2.6 with
	    latest msys2 to avoid 'undefined reference to __chk_fail'

2020-01-06  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/win32.c: Fix warnings caused by the change of rb_ensure()'s
	    arguments in ruby 2.7.

2019-12-16  Kubo Takehiro <kubo@jiubao.org>
	* test/test_datetime.rb: Remove "require 'scanf'" to run tests with Ruby 2.7.
	    The 'scanf' library was removed. https://bugs.ruby-lang.org/issues/16170

2019-12-15  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/oradate.c: Fix bug of OraDate.now introduced 15 years ago.

2019-12-15  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/attr.c, ext/oci8/oci8lib.c: Fix warnings caused by the
	    change of rb_ensure()'s arguments in ruby 2.7.

2019-06-19  Kubo Takehiro <kubo@jiubao.org>
	* Merge pull request #217 from nathanbwright/patch-1
	  Fix spelling in install-instant-client.md
	  (GH-217)
